dao select calls now call selectByMultipleColumns internally